# mn-cli

./: .env.example  .gitignore  AGENTS.md  README.md  RELEASE.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
mn_cli/: banner.py  config.py  error_handler.py  gradio_web_ui.py  logging_config.py  main.py  runtime_mode.py  runtime_state.py  sdk_path.py  server_cmds.py  shared.py  terminal.py  update_cmds.py
mn_cli/libs/: __init__.py  artifacts.py  backup_cmds.py  blueprint_cmds.py  blueprint_models.py  blueprint_observability.py  blueprint_repository.py  blueprint_resources.py  bundles.py  deployment_cmds.py  event_relay.py  job_cmds.py  model_cmds.py  operation_cmds.py  progress_stream.py  resource_cmds.py  run_cmds.py  run_logs.py  run_manifest.py  runtime_health.py  schedule_cmds.py  service_cmds.py  skill_dependencies.py  skill_runtime.py  stable_job_cmds.py  sys_cmds.py  ui.py  workflow_progress.py  workflow_validation.py
mn_cli/libs/run_cmds/: __init__.py  common.py  context.py  events.py  live.py  model_cluster.py  model_config.py  models.py  openshell.py  outputs.py  run_state.py  runtime_dependencies.py  web_ui.py
mn_cli/libs/run_cmds/handlers/: __init__.py  doctor.py  monitor.py  result.py  run.py  validate.py
mn_cli/runtime/: __init__.py  cluster.py  context_engine.py  docker.py  env.py  model_sync_monitor.py  paths.py  redis.py  server.py  sidecars.py  storage.py
mn_cli/runtime/cluster_ops/: __init__.py  credentials.py  identity.py  join.py  topology.py
mn_cli/schemas/: workflow_manifest.schema.json
tests/: conftest.py  runtime_model_fakes.py  test_backup_cmds.py  test_blueprint_cmds.py  test_blueprint_repository.py  test_blueprint_resources.py  test_cluster_ops.py  test_config.py  test_deployment_cmds.py  test_docker_network_integration.py  test_error_handling.py  test_gradio_web_ui.py  test_job_cmds.py  test_main.py  test_model_cmds.py  test_model_sync_monitor.py  test_repo_hygiene.py  test_resource_cmds.py  test_run_cmds.py  test_run_cmds_context.py  test_run_cmds_doctor.py  test_run_cmds_models.py  test_run_cmds_monitor_result.py  test_run_cmds_openshell.py  test_run_cmds_outputs.py  test_run_cmds_run.py  test_run_cmds_streams.py  test_run_cmds_validate.py  test_run_cmds_web_ui.py  test_run_cmds_workflow.py  test_run_helpers.py  test_runtime_health.py  test_runtime_mode.py  test_runtime_server_helpers.py  test_runtime_server_native_resources.py  test_runtime_state.py  test_schedule_cmds.py  test_server_cmds.py  test_service_cmds.py  test_shared.py  (+5 more)
