[project]
name = "mirrorneuron-cli"
dynamic = ["version"]
description = "MirrorNeuron CLI"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "mirrorneuron-python-sdk",
    "jsonschema>=4.25",
    "typer>=0.9.0",
    "rich>=13.0.0"
]

[project.scripts]
mn = "mn_cli.main:app"

[build-system]
requires = ["setuptools>=77", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "0.0.0"
local_scheme = "no-local-version"

[tool.setuptools.package-data]
mn_cli = ["schemas/*.json"]
